# pupgrade

./: CHANGELOG.md  Cargo.toml  README.md  action.yaml  deny.toml  flake.nix  taplo.toml
.github/: galock.toml
.github/workflows/: ci.yaml  release.yaml
src/: cli.rs  dep_collector.rs  editor.rs  lib.rs  main.rs  summary.rs  walker.rs
src/managers/: basic_dep.rs  bun.rs  cargo.rs  galock.rs  github_actions.rs  mod.rs  pnpm.rs  utils.rs
