[package]
name = "updater"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "=1.0.100"
boxcar = "=0.2.14"
camino = "=1.2.1"
dirs = "=6.0.0"
duct = "=1.1.0"
env_logger = { version = "=0.11.8", features = ["auto-color", "humantime"], default-features = false }
facet = { version = "=0.29.1", features = ["camino"] }
facet-json = "=0.29.1"
gix = { version = "=0.75.0", features = ["blocking-http-transport-reqwest-rust-tls"] }
hex = "=0.4.3"
lexopt = "=0.3.1"
log = { version = "=0.4.28", features = ["release_max_level_debug"] }
ratatui = "=0.29.0"
sha2 = "=0.10.9"
taplo = { version = "=0.14.0", default-features = false }
thiserror = "=2.0.17"
ureq = "=3.1.4"
