[package]
name = "updater"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "=1.0.100"
boxcar = "=0.2.14"
camino = "=1.2.1"
duct = "=1.1.0"
env_logger = { version = "=0.11.8", features = ["auto-color", "humantime"], default-features = false }
facet = { version = "=0.29.1", features = ["camino"] }
facet-json = "=0.29.1"
gix-ignore = "=0.16.0"
lexopt = "=0.3.1"
log = { version = "=0.4.28", features = ["release_max_level_debug"] }
ratatui = "=0.29.0"
taplo = { version = "=0.14.0", default-features = false }
thiserror = "=2.0.17"
